# Lima-camera-fli

./: .gitignore  CMakeLists.txt  README.md
conda/camera/: meta.yaml
conda/tango/: meta.yaml
doc/: index.rst
include/: FliBinCtrlObj.h  FliCamera.h  FliCompatibility.h  FliDetInfoCtrlObj.h  FliInterface.h  FliRoiCtrlObj.h  FliShutterCtrlObj.h  FliSyncCtrlObj.h
python/: __init__.py
sdk/libfli-1.104/: Makefile  copyright.notice
sip/: FliCamera.sip  FliInterface.sip
src/: FliBinCtrlObj.cpp  FliCamera.cpp  FliDetInfoCtrlObj.cpp  FliInterface.cpp  FliRoiCtrlObj.cpp  FliShutterCtrlObj.cpp  FliSyncCtrlObj.cpp  Makefile
tango/: CMakeLists.txt
test/: CMakeLists.txt  test_fli.py  test_fli_list_devices.cpp
